[KOM-11] feat(api): implement teacher management API
